1,支持运行时解析并生成setter